--- a/src/Orchestra.Core/Views/KeyboardMappingsCustomizationWindow.xaml
+++ b/src/Orchestra.Core/Views/KeyboardMappingsCustomizationWindow.xaml
@@ -3,7 +3,7 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"
                   xmlns:views="clr-namespace:Orchestra.Views"
-                  xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                  xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                   xmlns:behaviors="clr-namespace:Orchestra.Behaviors"
                   Width="700" SizeToContent="Height"
                   MinHeight="400" MinWidth="500">
