--- a/src/Orchestra.Core/Views/KeyboardMappingsOverviewWindow.xaml
+++ b/src/Orchestra.Core/Views/KeyboardMappingsOverviewWindow.xaml
@@ -3,8 +3,7 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"
                   xmlns:views="clr-namespace:Orchestra.Views"
-                  xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                  xmlns:behaviors="clr-namespace:Orchestra.Behaviors"
+                  xmlns:behaviors="clr-namespace:Orchestra.Behaviors" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                   Width="700" SizeToContent="Height">
 
     <i:Interaction.Behaviors>
