--- a/src/Orchestra.Core/Views/MessageBoxWindow.xaml
+++ b/src/Orchestra.Core/Views/MessageBoxWindow.xaml
@@ -2,8 +2,7 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"
-                  xmlns:converters="clr-namespace:Orchestra.Converters"
-                  xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                  xmlns:converters="clr-namespace:Orchestra.Converters" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                   SizeToContent="WidthAndHeight" ResizeMode="NoResize"
                   WindowStartupLocation="CenterOwner" CanCloseUsingEscape="False">
 
