--- a/src/Orchestra.Examples.MahApps/Views/PersonView.xaml
+++ b/src/Orchestra.Examples.MahApps/Views/PersonView.xaml
@@ -2,7 +2,7 @@
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                   xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                    xmlns:orccontrols="http://schemas.wildgums.com/orc/controls">
 
     <orccontrols:StackGrid x:Name="layoutRoot">
