--- a/src/Orchestra.Shell.TaskRunner/Views/ShellWindow.xaml
+++ b/src/Orchestra.Shell.TaskRunner/Views/ShellWindow.xaml
@@ -2,7 +2,7 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"
-                  xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                  xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                   xmlns:behaviors="clr-namespace:Orchestra.Behaviors"
                   xmlns:orclogviewer="http://schemas.wildgums.com/orc/logviewer"
                   xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
